--- a/src/main/webapp/more.html
+++ b/src/main/webapp/more.html
@@ -5,7 +5,6 @@
 <title>Tokyo Bowl</title>
 
 <link rel="stylesheet" type="text/css" href="css/style.css" />
-
 <script type="text/javascript" src="js/jquery-1.2.6.pack.js"></script>
 <script type="text/javascript" src="js/stepcarousel.js"></script>
 <script type="text/javascript" src="js/jquery-1.3.min.js"></script>
@@ -29,15 +28,16 @@
 		defaultbuttons : {
 			enable : true,
 			moveby : 1,
-			leftnav : [ 'images/arrow-left.gif', -50, 115 ],
-			rightnav : [ 'images/arrow-right.gif', 20, 115 ]
+			leftnav : [ 'images/arrow-left2.gif', 80, 295 ],
+			rightnav : [ 'images/arrow-right2.gif', -110, 295 ]
 		},
 		statusvars : [ 'statusA', 'statusB', 'statusC' ], //register 3 variables that contain current panel (start), current panel (last), and total panels
 		contenttype : [ 'inline' ]
 	//content setting ['inline'] or ['external', 'path_to_external_file']
 	})
- 
+	
 </script>
+
 
 <!--[if lte IE 6]>
 <style type="text/css">
@@ -55,7 +55,7 @@ img  { behavior: url(js/iepngfix.htc) }
 			<div id="top">
 				<div id="header">
 					<div class="head-left">
-						<h1>Tokyo Bowl</h1>
+						<h1>Fun Design</h1>
 					</div>
 					<!-- End Head Left-->
 					<div class="head-right">
@@ -66,9 +66,9 @@ img  { behavior: url(js/iepngfix.htc) }
 				<!-- End Header-->
 				<div id="nav">
 					<ul>
-						<li class="current_page_item"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="menu.html">Menu</a></li>
-						<li><a href="more.html">More</a></li>
+						<li class="current_page_item"><a href="more.html">More</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -77,66 +77,58 @@ img  { behavior: url(js/iepngfix.htc) }
 			<!-- End Top-->
 		</div>
 		<!-- End Wrap-->
-		<div id="featured">
-			<div class="wrap">
-
-				<div class="fea">
-					<div id="mygallery" class="stepcarousel">
-						<div class="belt">
-							<div class="panel">
-								<img src="images/foodImg/food1.JPG" alt="" />
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food2.JPG" alt="" />
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food4.JPG" alt="" />
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food5.JPG" alt="" />
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food6.JPG" alt=""></img>
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food7.JPG" alt=""></img>
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food8.JPG" alt=""></img>
-							</div>
-							<div class="panel">
-								<img src="images/foodImg/food9.JPG" alt=""></img>
+		<div class="wrap">
+			<div id="container">
+				<div id="left-container-contact">
+					<div class="contact-detailes">
+						<h1>Enjoy our food even better!!</h1>
+						<p style="margin-left: 10px; margin-top: 20px">1. On our
+							table, there are two soy sauce jars. Even though both jars
+							indicate specific soy sauce company, one jar is not actually soy
+							sauce. The bigger jar with "T" mark on the lid contains
+							Thin-Teriyaki-sauce. Our Teriyaki sauce is made in two types. One
+							with "Thick", and the other is "Thin" which located in each of
+							our tables. If you ordered one of our rice bowls, and if you want
+							sweeter or saltier, you can control the taste by using one of
+							those jars.</p>
+						<p style="margin-left: 10px; margin-top: 20px;">2. Have you
+							tried our ginger which is also located in our table? This is the
+							red stuff in a round jar. It works like the pickles with pizza. I
+							think ginger really works well with our food.</p>
+						<div class="clear"></div>
+					</div>
+					<!-- End Contact Details-->
+				</div>
+				<!-- End Left Container-->
+				<div id="right-container-contact">
+					<div class="main-contact-form">
+						<h2>Restaurant Gallery</h2>
+						<div class="fea2">
+							<div id="mygallery" class="stepcarousel">
+								<div class="belt">
+									<div class="panel">
+										<img src="images/locationImg/fanonWall.jpg" alt="" />
+									</div>
+									<div class="panel">
+										<img src="images/locationImg/location2.JPG" alt="" />
+									</div>
+									<div class="panel">
+										<img src="images/locationImg/location3.JPG" alt="" />
+									</div>
+									<div class="panel">
+										<img src="images/locationImg/location4.JPG" alt="" />
+									</div>
+									<div class="panel">
+										<img src="images/locationImg/tb_back.jpg" alt=""></img>
+									</div>
+									<div class="panel">
+										<img src="images/locationImg/tb_front.jpg" alt=""></img>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<h1>Welcome to Tokyo Bowl!</h1>
-				<p>Tokyo Bowl is a Japanese restaurant that has been serving
-					Univeristy of Denver area more than 10 years. At Tokyo Bowl, we
-					take great pride in our attention to keep our food healthy, fast,
-					and delicious.</p>
-				<div class="more">
-					<a href="menu.html" title="View Our Menu">View Our Menu</a>
-				</div>
-				<!--End More-->
-				<!--End More-->
-			</div>
-			<!-- End Wrap-->
-		</div>
-		<!-- End Featured-->
-		<div class="wrap">
-			<div id="container">
-				<div id="left-container"></div>
-				<!-- End Left Container-->
-				<div id="right-container">
-					<div class="welcome">
-						<h2></h2>
-						<p>
-							<!--  <br /> <a href="#">Read More..</a>-->
-						</p>
-					</div>
-					<!-- End Welcome-->
-
+					<!-- end Contact Form -->
 				</div>
 				<!-- Right Container-->
 				<div class="clear"></div>
@@ -154,3 +146,7 @@ img  { behavior: url(js/iepngfix.htc) }
 	<!-- End Main-->
 </body>
 </html>
+
+
+
+
