--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -3,7 +3,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Tokyo Bowl</title>
-<script type="text/javascript" src="js/google-analytics.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 <!--[if lte IE 6]>
@@ -11,7 +10,16 @@
 img  { behavior: url(js/iepngfix.htc) }
 </style>
 <![endif]-->
+<script type="text/html">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-42065616-1', 'tokyobowl-t3st.rhcloud.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
