--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -7,13 +7,22 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <script type="text/javascript" src="js/jquery-1.3.min.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/google-analytics.js"></script>
+
 <!--[if lte IE 6]>
 <style type="text/css">
 img  { behavior: url(js/iepngfix.htc) }
 </style>
 <![endif]-->
+<script type="text/html">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-42065616-1', 'tokyobowl-t3st.rhcloud.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
